# terndata.flux

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  NOTICE  README.md  envvars  pyproject.toml  requirements-flake8.txt  requirements-mypy.txt  requirements-test.txt  requirements.txt  tox.ini
.github/workflows/: publish.yml  test.yml
ci-scripts/: run-tests.sh
docs/: api.rst  changelog.rst  conf.py  index.rst  requirements.txt  run-docs.sh
examples/: example_explore_flux_data.py  example_flux-data-api.ipynb
src/terndata.flux/: flux_api.py
src/terndata/flux/: __init__.py  export_utils.py  flux_api.py  plot.py  utils.py
tests/: conftest.py  test_flux_api.py  test_utils.py
tests/data/: AdelaideRiver_test.nc  WallabyCreek_test.nc  Warra_daily_test.nc  dataset_catalog.xml  processing_level_catalog.xml  site_catalog.xml  version_catalog.xml
